ETL_Pipeline/airflow/logs/dag_id=etl_news_pipeline/run_id=manual__2023-05-14T22:25:04.458573+00:00/task_id=load_data/attempt=2.log
[2023-05-15T00:27:15.137+0200] {taskinstance.py:1125} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: etl_news_pipeline.load_data manual__2023-05-14T22:25:04.458573+00:00 [queued]>
[2023-05-15T00:27:15.144+0200] {taskinstance.py:1125} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: etl_news_pipeline.load_data manual__2023-05-14T22:25:04.458573+00:00 [queued]>
[2023-05-15T00:27:15.144+0200] {taskinstance.py:1331} INFO - Starting attempt 2 of 2
[2023-05-15T00:27:15.156+0200] {taskinstance.py:1350} INFO - Executing <Task(PythonOperator): load_data> on 2023-05-14 22:25:04.458573+00:00
[2023-05-15T00:27:15.180+0200] {standard_task_runner.py:57} INFO - Started process 1985 to run task
[2023-05-15T00:27:15.188+0200] {standard_task_runner.py:84} INFO - Running: ['airflow', 'tasks', 'run', 'etl_news_pipeline', 'load_data', 'manual__2023-05-14T22:25:04.458573+00:00', '--job-id', '1376', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/var/folders/qv/qkzfd8cs7hdftb0synd9cw3h0000gn/T/tmp3yd9kigf']
[2023-05-15T00:27:15.191+0200] {standard_task_runner.py:85} INFO - Job 1376: Subtask load_data
[2023-05-15T00:27:15.247+0200] {task_command.py:410} INFO - Running <TaskInstance: etl_news_pipeline.load_data manual__2023-05-14T22:25:04.458573+00:00 [running]> on host niyants-mbp.fritz.box
[2023-05-15T00:27:15.314+0200] {taskinstance.py:1568} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='etl_news_pipeline' AIRFLOW_CTX_TASK_ID='load_data' AIRFLOW_CTX_EXECUTION_DATE='2023-05-14T22:25:04.458573+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-05-14T22:25:04.458573+00:00'
[2023-05-15T00:27:15.323+0200] {base.py:73} INFO - Using connection ID '***_connection' for task execution.
[2023-05-15T00:27:15.329+0200] {taskinstance.py:1847} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/Users/niyantmehta/opt/anaconda3/envs/finalvenv/lib/python3.11/site-packages/airflow/operators/python.py", line 181, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/niyantmehta/opt/anaconda3/envs/finalvenv/lib/python3.11/site-packages/airflow/operators/python.py", line 198, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/niyantmehta/Spiced/ETL_Pipeline/airflow/ETL_dags/etl_pipeline.py", line 28, in load_data
    cursor.execute(query)
psycopg2.errors.SyntaxError: unterminated quoted string at or near "'/Users/niyantmehta/Spiced/ETL_Pipeline/airflow/data.csv"
LINE 1: ...able(date, section, title, article, summary) FROM '/Users/ni...
                                                             ^

[2023-05-15T00:27:15.339+0200] {taskinstance.py:1368} INFO - Marking task as FAILED. dag_id=etl_news_pipeline, task_id=load_data, execution_date=20230514T222504, start_date=20230514T222715, end_date=20230514T222715
[2023-05-15T00:27:15.353+0200] {standard_task_runner.py:104} ERROR - Failed to execute job 1376 for task load_data (unterminated quoted string at or near "'/Users/niyantmehta/Spiced/ETL_Pipeline/airflow/data.csv"
LINE 1: ...able(date, section, title, article, summary) FROM '/Users/ni...
                                                             ^
; 1985)
[2023-05-15T00:27:15.364+0200] {local_task_job_runner.py:232} INFO - Task exited with return code 1
[2023-05-15T00:27:15.389+0200] {taskinstance.py:2674} INFO - 0 downstream tasks scheduled from follow-on schedule check
